--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </header>
   <main>
     <section class="h-60vh sm:h-80vh lg:h-full w-full">
-      <video class="object-cover h-60vh sm:h-80vh lg:h-full w-full" loop autoplay muted src="vid/vid.mp4"></video>
+      <video class="object-cover h-60vh sm:h-80vh lg:h-full w-full" loop autoplay muted src="vid2/vid.mp4"></video>
     </section>
     <section class="h-60 bg-white flex flex-col items-center text-center">
       <h1 class="text-4xl font-helvetica_compresses font-extrabold mt-5 tracking-tighter">OUR TURN</h1>
